plugins {
    id 'java'
}

group 'io.github.karlatemp'
version '1.0.0'
repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_9
    targetCompatibility = JavaVersion.VERSION_1_9
    options.compilerArgs.addAll([
            '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-exports', 'java.base/jdk.internal.access=ALL-UNNAMED'
    ])
}